# upset

./: CMakeLists.txt  README.md  pyproject.toml
src/: dlmalloc.c  globalmallocheap.h  kmalloc.c  libupset.cpp  randomnumbergenerator.h  shuffleheap.h
src/old/: dlmalloc-config.h  dlmalloc.c  globalmallocheap.h  kmalloc.c  randomnumbergenerator.h  shuffleheap.h
test/: entropy.py  histogram.py  setmeup.py  test_map.cpp  test_setmeup.py
upset/: __init__.py  __main__.py
