[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "scikit-build>=0.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upset"
version = "0.0.1"
description = "Fine-grained address fuzzing"
authors = [
    {name = "Emery Berger", email = "emery.berger@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.source-dir = "src"
cmake.build-type = "Release"

[tool.setuptools]
packages = ["upset"]

#[project.urls]
#Homepage = "https://github.com/yourusername/your-repo"
#Repository = "https://github.com/yourusername/your-repo.git"