[build-system]
# Use scikit-build-core for building C extensions / libraries
requires = [
    "scikit-build-core>=0.8.0",  # or newer
    "setuptools>=42",
    "wheel",
    "cmake>=3.18"
]
build-backend = "scikit_build_core.build"

[project]
name = "upset"
version = "0.0.1"
description = "Fine-grained address fuzzing"
authors = [
    { name = "Emery Berger", email = "emery.berger@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.scikit-build]
# The top-level directory is where CMakeLists.txt resides
cmake.source-dir = "."
cmake.build-type = "Debug" # "Release"

[tool.setuptools]
# We have exactly one Python package, located in `upset/`
packages = ["upset"]
