[build-system]
# Use scikit-build-core (plus setuptools, wheel, and cmake) to build
requires = [
    "scikit-build-core>=0.8.0",
    "setuptools>=42",
    "wheel",
    "click>=8.1.0",    
    "cmake>=3.18"
]
build-backend = "scikit_build_core.build"

[project]
name = "upset"
version = "0.0.1"
description = "Upset"
authors = [
    { name = "Emery Berger", email = "emery.berger@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[tool.scikit-build]
# This points to the directory containing your top-level CMakeLists.txt
cmake.source-dir = "."
cmake.build-type = "Debug"  # or "Release"

[tool.setuptools]
packages = ["upset"]
